# aiworkshop_Feb2026

./: .env.example  .gitignore  README.md  SETUP.md  download_sample_papers.py  pyproject.toml  requirements.txt
_old/: 1_existing_tools_survey.ipynb  2_literature_finder.ipynb  2_literature_search.ipynb  manuscript_evaluator_colab.ipynb  workshop_outline.md
agentic-paper-review/: .gitignore  LICENSE  agent.py  readme.md  requirements.txt  review.json  run_review.py  streamlit_app.py  train_weights.py
data/ICLR2022/: decision2ids.json  id2decision.json
data/ICLR2022/notes/Accept-oral/: 154.json  208.json  222.json  224.json  284.json  86.json
data/ICLR2022/notes/Accept-poster/: 10.json  101.json  102.json  104.json  109.json  11.json  112.json  113.json  12.json  14.json  25.json  30.json  31.json  39.json  42.json  45.json  56.json  68.json  73.json  80.json  88.json  89.json  9.json  90.json  96.json
data/ICLR2022/notes/Accept-spotlight/: 1.json  158.json  172.json  34.json  4.json  64.json
data/ICLR2022/notes/Reject/: 100.json  103.json  105.json  106.json  108.json  115.json  120.json  121.json  122.json  130.json  134.json  142.json  143.json  144.json  145.json  152.json  153.json  157.json  159.json  168.json  173.json  174.json  175.json  176.json  179.json  180.json  186.json  187.json  193.json  194.json  197.json  200.json  201.json  205.json  210.json  216.json  226.json  229.json  233.json  234.json  (+31 more)
examples/: sample_manuscript.md
input/: sample_manuscript.md  sample_method.md
lib/: agent_gemini.py
notebooks/: 1_overview.ipynb  2.5_manuscript_preparation.ipynb  2_crawlers_and_selector.ipynb  2_literature_search.ipynb  3_paper_review_agent.ipynb  3_related_work.ipynb  4_peer_review.ipynb  4_review_comparison.ipynb  5_advanced_review.ipynb  6_agentreview_advanced.ipynb  6_agentreview_demo.ipynb
notebooks/old/: 6_agentreview_demo.ipynb
