[project]
name = "aiworkshop-feb2026"
version = "0.1.0"
description = "AI Literature Review Agent Workshop - SNU AI Psychology"
requires-python = ">=3.10"
dependencies = [
    # Jupyter & Notebook
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",

    # Environment & Config
    "python-dotenv>=1.1.1",

    # LLM APIs
    "google-generativeai>=0.8.5",
    "openai>=1.0.0",

    # Academic APIs & Data
    "requests>=2.31.0",
    "semanticscholar>=0.8.0",
    "arxiv>=2.0.0",

    # Data Processing
    "pandas>=2.0.0",

    # File Processing (PDF, Word)
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "llama-index-readers-file>=0.1.0",

    # AgentReview CLI dependencies
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.0",

    # Dataset Access (for PeerRead in Part 5)
    "datasets>=2.14.0",

    # LangGraph Agent (Notebook 3)
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["notebooks"]

[tool.uv]
dev-dependencies = []
